Parte visual do componente forms finalizado.

--- a/src/app/components/forms/forms.component.css
+++ b/src/app/components/forms/forms.component.css
@@ -68,6 +68,7 @@
   padding: 14px;
   width: 25%;
   border: none;
+  cursor: pointer;
 }
 
 .form-group .btn-wrapper .btn-primary {
@@ -81,5 +82,16 @@
 
 .form-group .checkbox-wrapper {
   color: var(--light-grey);
-  margin-top: 32px;
+  margin: 32px 0;
+  position: relative;
+  width: 100%;
+}
+
+.form-group .checkbox-wrapper span {
+  position: absolute;
+  right: 0;
+}
+
+.ml {
+  margin-left: 8px;
 }
