--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -4,26 +4,26 @@
 
     <div class="radio-wrapper">
         <input type="radio" name="manha" value="manha">
-        <label for="manha">Manhã</label>
+        <label class="ml" for="manha">Manhã</label>
         <span>06:00 ás 12h</span>
     </div>
 
     <div class="radio-wrapper">
         <input type="radio" name="tarde" value="tarde">
-        <label for="tarde">Tarde</label>
+        <label class="ml" for="tarde">Tarde</label>
         <span>12:01 ás 18h</span>
     </div>
 
     <div class="radio-wrapper">
         <input type="radio" name="noite" value="noite">
-        <label for="noite">Noite</label>
+        <label class="ml" for="noite">Noite</label>
         <span>18:01 ás 23h</span>
     </div>
 
     <div class="checkbox-wrapper">
         <input type="checkbox" name="show-closed">
-        <label for="show-closed">Exibir unidades fechadas.</label>
-        <span></span>
+        <label class="ml" for="show-closed">Exibir unidades fechadas.</label>
+        <span>Resultados encontrados: {{results.length}}</span>
     </div>
 
     <div class="btn-wrapper">
