Ajustando css do app-component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-header></app-header>
-<app-forms></app-forms>
+<div class="app-container">
+
+    <app-header></app-header>
+    <app-forms></app-forms>
+
+</div>
